# telegramjobnotifier

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
bot/: __init__.py  bot.py  handlers.py  http_server.py  main.py  middleware.py
server/: main.py  models.py  routes.py
services/: database.py  formatter.py  forwarder.py
telegramjobnotifier/: pyproject.toml
tests/: conftest.py  test_bot_http_server.py  test_bot_wiring.py  test_config.py  test_database.py  test_formatter.py  test_forwarder.py  test_handlers.py  test_integration.py  test_server_routes.py
